tests/good/simple21.tig
var x := 0
var y := (x := x+1; 1/x)