tests/bad/simple20.tig
var x := (while 0 do print("coucou"); 1/0)